feat: Changed columns, ui improvements
